--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -5,6 +5,7 @@ html { font-family:
         'Apple Color Emoji',
         'Segoe UI Emoji',
         'Segoe UI Symbol';
+        font-size: 15px;
       }
 @supports (font-variation-settings: normal) {
   html { font-family:
@@ -17,15 +18,6 @@ html { font-family:
 }
 
 code {
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Helvetica,
-    Arial,
-    sans-serif,
-    "Apple Color Emoji",
-    "Segoe UI Emoji",
-    "Segoe UI Symbol";
+  font-family: 'Consolas', 'Monaco', monospace;   
   font-size: 85%;
 }
