--- a/public/css/fonts.css
+++ b/public/css/fonts.css
@@ -1,19 +1,19 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
-        'Inter',
-        sans-serif,
-        'Apple Color Emoji',
-        'Segoe UI Emoji',
-        'Segoe UI Symbol';
+        'JetBrains Mono',
+        'IBM Plex Mono',
+        'SF Mono',
+        'Consolar',
+        monospace;
         font-size: 15px;
       }
 @supports (font-variation-settings: normal) {
   html { font-family:
-          'Inter var',
-          sans-serif,
-          'Apple Color Emoji',
-          'Segoe UI Emoji',
-          'Segoe UI Symbol';
+        'JetBrains Mono',
+        'IBM Plex Mono',
+        'SF Mono',
+        'Consolar',
+        monospace;
         }
 }
 
