--- a/themes/hugo-classic/layouts/partials/head_custom.html
+++ b/themes/hugo-classic/layouts/partials/head_custom.html
@@ -1,1 +1,7 @@
+<!-- Google Fonts - JetBrains Mono -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href="{{ "css/custom.css" | relURL }}">
