--- a/themes/hugo-classic/layouts/partials/footer.html
+++ b/themes/hugo-classic/layouts/partials/footer.html
@@ -1,35 +1,6 @@
-    <footer>
-      {{ partial "foot_custom.html" . }}
-      <!-- Automagically centers images. Original Author Yihui Xie: https://yihui.name -->
-      <script>
-      (function() {
-        function center_el(tagName) {
-          var tags = document.getElementsByTagName(tagName), i, tag;
-          for (i = 0; i < tags.length; i++) {
-            tag = tags[i];
-            var parent = tag.parentElement;
-            // center an image if it is the only element of its parent
-            if (parent.childNodes.length === 1) {
-              // if there is a link on image, check grandparent
-              if (parent.nodeName === 'A') {
-                parent = parent.parentElement;
-                if (parent.childNodes.length != 1) continue;
-              }
-              if (parent.nodeName === 'P') parent.style.textAlign = 'center';
-            }
-          }
-        }
-        var tagNames = ['img', 'embed', 'object'];
-        for (var i = 0; i < tagNames.length; i++) {
-          center_el(tagNames[i]);
-        }
-      })();
-      </script>
-
-      {{ with .Site.Params.footer }}
-      <hr/>
-      {{ . | markdownify }}
-      {{ end }}
-    </footer>
+<footer>
+    <hr style="border: 0; border-top: 1px solid #222; margin: 3rem 0 1rem;">
+    <p style="color: #444; font-size: 0.85rem;">mushy © {{ now.Format "2006" }}</p>
+</footer>
   </body>
 </html>
