--- a/themes/hugo-classic/layouts/partials/header.html
+++ b/themes/hugo-classic/layouts/partials/header.html
@@ -20,12 +20,12 @@
   </head>
 
   <body>
-    <header>
-      <nav style="margin-bottom: 3rem;">
-        <a href="/" style="font-weight: 600; margin-right: 1.5rem;">m u s h y</a>
+<header>
+    <nav style="margin-bottom: 3rem;">
+        <a href="/" style="font-weight: 600; margin-right: 1.5rem;">~</a>
         <a href="/post" style="margin-right: 1.5rem;">posts</a>
         <a href="/about" style="margin-right: 1.5rem;">about</a>
         <a href="/projects">projects</a>
-      </nav>
-    </header>
+    </nav>
+</header>
 
