--- a/themes/hugo-classic/static/css/style.css
+++ b/themes/hugo-classic/static/css/style.css
@@ -217,7 +217,6 @@ img, iframe, video {
   max-width: 100%;
   height: auto;
   display: block;
-  margin-left: auto;
   margin-right: auto;
 }
 
@@ -236,9 +235,11 @@ main a {
 }
 
 blockquote {
-
-  border-left: 5px solid #ccc;
-  padding: 3px 1em 3px;
+  border-left: 2px solid #333;
+  padding-left: 1rem;
+  margin: 1.5rem 0;
+  color: #888;
+  font-style: italic;
 }
 
 .content-wrapper {
