--- a/themes/hugo-classic/layouts/partials/header.html
+++ b/themes/hugo-classic/layouts/partials/header.html
@@ -24,8 +24,9 @@
     <nav style="margin-bottom: 3rem;">
         <a href="/" style="font-weight: 600; margin-right: 1.5rem;">~</a>
         <a href="/post" style="margin-right: 1.5rem;">posts</a>
-        <a href="/about" style="margin-right: 1.5rem;">about</a>
-        <a href="/projects">projects</a>
+        <a href="/ctf" style="margin-right: 1.5rem;">ctf</a>
+        <a href="/projects" style="margin-right: 1.5rem;">projects</a>
+        <a href="/about">whoami</a>
     </nav>
 </header>
 
