Changed name in footer

--- a/themes/hugo-classic/layouts/partials/footer.html
+++ b/themes/hugo-classic/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <hr style="border: 0; border-top: 1px solid #222; margin: 3rem 0 1rem;">
-    <p style="color: #444; font-size: 0.85rem;">mushy © {{ now.Format "2006" }}</p>
+    <p style="color: #444; font-size: 0.85rem;">orphic © {{ now.Format "2006" }}</p>
 </footer>
   </body>
 </html>
